[package]
name = "storage-client"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow-array = "51.0.0"
anyhow = "1"
hyper = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
storage-common = { path = "../storage-common" }
futures = "0.3"
reqwest = { version = "0.12", features = ["stream"] }
tempfile = "3.2"
parquet = { version = "51.0.0", features = ["async"] }
arrow = "51.0.0"
mockito = "1.4.0"
