[package]
name = "storage-node"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "50"
anyhow = "1"
bytes = "1"
hyper = "1"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
] }
datafusion = "35"
hashlink = "0.8"
enum-as-inner = "0.6"
futures = { version = "0.3", features = ["alloc"] }
thiserror = "1"
aws-sdk-s3 = "1"
aws-config = "1"
aws-smithy-runtime-api = "1"
async-trait = "0.1"
tempfile = "3.10.1"
