[package]
name = "storage-node"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
hyper = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
hashlink = "0.8"
enum-as-inner = "0.6"
futures = { version = "0.3", features = ["alloc"] }
thiserror = "1"
aws-sdk-s3 = "1"
aws-config = "1"
aws-smithy-runtime-api = "1"
async-trait = "0.1"
parpulse-client = { path = "../storage-client" }
warp = "0.3"
tokio-util = "0.7"
reqwest = "0.12"
tempfile = "3.10.1"
rand = "0.8"
tokio-stream = "0.1"
rusqlite = { version = "0.31", features = ["blob"] }
log = "0.4"
env_logger = "0.11"
crc32fast = "1.4.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serial_test = "3.1"
